--- a/Randomizly/Base.lproj/Main.storyboard
+++ b/Randomizly/Base.lproj/Main.storyboard
@@ -32,6 +32,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="randomNumberLabel" destination="qTP-JV-KTS" id="rYL-Vc-dke"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
